<resources>
    <string name="app_name">MrPotatoHead</string>
    <string name="arms">arms</string>
    <string name="ears">ears</string>
    <string name="eyebrows">eyebrows</string>
    <string name="eyes">eyes</string>
    <string name="glasses">glasses</string>
    <string name="hat">hat</string>
    <string name="mouth">mouth</string>
    <string name="moustache">moustache</string>
    <string name="nose">nose</string>
    <string name="shoes">shoes</string>
</resources>
